--- a/React-Redux/package.json
+++ b/React-Redux/package.json
@@ -2,19 +2,19 @@
   "name": "react-redux",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node test.js",
- 
-
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "@ Ariful Islam Toufiq ",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2"
   }
 }
