--- a/React-Redux/package.json
+++ b/React-Redux/package.json
@@ -2,9 +2,9 @@
   "name": "react-redux",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/test.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node src/test.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
